# microfarm.courrier

./: pyproject.toml  requirements.txt  service.py
example/: service.courrier.toml
microfarm_courrier/: service.py
tests/: conftest.py  test_service.py
