[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microfarm_courrier"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "sch@treegital.fr"},
]
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "aiozmq",
  "minicli",
  "postrider",
  "tomli",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "smtpdfix"
]

[project.scripts]
mfcourrier = "microfarm_courrier.service:run"

[tool.setuptools.packages.find]
where = ["."]